src/test/deca/context/valid/created/this/setter_ambigue.deca
// Description :
//		un setter classique,mais ambigue
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: ??


class A {
int x;
void setX(int x){
	x=x;
}

}