src/test/deca/context/invalid/created/object/equals_int_int.deca
// Description :
//    test equals entre un int et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: 
class A{}
{
int a;
int b;
int c = a.equal(b);
}
